# icml-2022

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  build_docs.sh  file.py  genindex.html  index.html  make_script.py  objects.inv  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  search.html  searchindex.js  setup.cfg  tasks_config.json  test.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: task.md
.github/scripts/: check_coverage.sh  prefix.txt  suffix.txt
.github/workflows/: build-sphinx.yml  main.yml  pr-status.yml  pypi.yaml  test-sphinx.yml  tests.yml
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: requirements.txt
docs/source/: _community_benchmark.rst  _main_event.rst  _related_packages.rst  api.rst  call_for_papers.rst  call_for_reviewers.rst  community_benchmark.rst  conf.py  index.rst  main_event.rst  organizers.html  papers.rst  render_papers.py  schedule.csv  schedule.rst  speakers.html
docs/source/_static/css/: custom.css
examples/: imagenet_3dcc.py  imagenet_adv_patch.py  imagenet_c.py  imagenet_cartoon.py  imagenet_d.py  imagenet_drawing.py  imagenet_m.py  imagenet_metashift.py  imagenet_patch.py  imagenet_r.py  raccoons_OOD.py  worst_case.py
examples/imagenet_d_helper/: imagenet_classes.csv  map_classes.py
shifthappens/: __init__.py  benchmark.py  config.py  metrics.py  model_comparison.py  utils.py
shifthappens/data/: __init__.py  base.py  imagenet.py  torch.py
shifthappens/imagenet_cpatch/: README.rst
shifthappens/models/: __init__.py  base.py  mixins.py  model.py  torchvision.py
shifthappens/task_data/: __init__.py  task_metadata.py  task_registration.py
shifthappens/tasks/: __init__.py  base.py  ccc.py  ccc_accuracy_matrix.pickle  ccc_imagenet_c.py  ccc_lmdb.py  ccc_utils.py  metrics.py  mixins.py  raccoons_OOD.py  racoons_OOD.py  robustness.py  siscore.py  siscore_labels.py  task.py  task_result.py  utils.py
shifthappens/tasks/ccc/: __init__.py  ccc.py  ccc_imagenet_c.py  ccc_lmdb.py  ccc_utils.py
shifthappens/tasks/imagenet_3dcc/: README.rst  __init__.py  imagenet_3dcc.py
shifthappens/tasks/imagenet_c/: README.rst  __init__.py  imagenet_c.py
shifthappens/tasks/imagenet_cartoon/: README.md  __init_.py  __init__.py  imagenet_cartoon.py
shifthappens/tasks/imagenet_cpatch/: CITATION.cff  README  __init__.py  imagenet_cpatch.py
shifthappens/tasks/imagenet_d/: __init__.py  imagenet_d.py  map_classes.py
shifthappens/tasks/imagenet_drawing/: CITATION.cff  README.md  __init__.py  imagenet_drawing.py
shifthappens/tasks/imagenet_m/: README.rst  __init__.py  imagenet_m.py
shifthappens/tasks/imagenet_metashift/: README.md  __init__.py  imagenet_metashift.py
shifthappens/tasks/imagenet_patch/: CITATION.cff  README.md  README.rst  __init__.py  __main__.py  imagenet_patch.py  imagenet_patch_utils.py  utils.py
shifthappens/tasks/imagenet_r/: README.rst  __init__.py  imagenet_r.py
shifthappens/tasks/lost_in_translation/: lost_in_translation.py
shifthappens/tasks/lost_in_translation/affine_transformations/: affine.py  affine_linspace.py  affine_linspace_adaptive.py  statistics.py
shifthappens/tasks/lost_in_translation/imagenet_s/: imagenet_s.py
shifthappens/tasks/objectnet/: CITATION.cff  README.rst  __init__.py  objectnet.py  objectnet_utils.py
shifthappens/tasks/raccoons_ood/: README.rst  __init__.py  raccoons_ood.py
shifthappens/tasks/siscore/: README.md  __init__.py  siscore.py  siscore_labels.py
shifthappens/tasks/ssb/: README.md  __init__.py  imagenet_ssb.py  semantic_shift_benchmark.py
shifthappens/tasks/worst_case/: README.rst  __init__.py  worst_case.py  worst_case_utils.py
tests/: requirements.txt  test_benchmark.py  test_config.py  test_data.py  test_models.py  test_tasks.py  test_utils.py
