[metadata]
name = shifthappens
version = 0.0.1-alpha
author = Julian Bitterwolf, Evgenia Rusak, Steffen Schneider, Roland S Zimmermann
author_email = shifthappens@bethgelab.org
description = Helper code for ICLR2022 workshop submission
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://shift-happens-benchmark.github.io
project_urls =
    Bug Tracker = https://github.com/shift-happens-benchmark/2022
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Topic :: Software Development :: Libraries
    Topic :: Utilities
license_files=LICENSE

[options]
package_dir =
    = .
py_modules = shifthappens
python_requires = >=3.8

[options.extras_require]
install_requires =
    pytest

[options.packages.find]
where = .
