[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 100
# taken from pytorch flake8 configuration: 
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore = E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303

[mypy]
python_version = 3.8

[mypy-numpy]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-surgeon_pytorch]
ignore_missing_imports = True

[metadata]
name = shifthappens
version = attr: shifthappens.__version__
author = Julian Bitterwolf, Evgenia Rusak, Steffen Schneider, Roland S. Zimmermann
author_email = shifthappens@bethgelab.org
description = Benchmark for image classifiers created for the Shift Happens ICML 2022 workshop
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://shift-happens-benchmark.github.io
project_urls =
    Bug Tracker = https://github.com/shift-happens-benchmark/2022
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Utilities
license_file = LICENSE
license = Apache 2.0

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    torch
    torchvision
    surgeon_pytorch

[options.extras_require]
dev =
    flake8==4.0.1
    click==8.0.1
    black==22.1.0
    pytest==7.1.1
    mypy==0.942
    pre-commit==2.17.0
    isort==5.10.1
    sphinx==4.5.0
    sphinx_autodoc_typehints==1.18.1
    sphinx_copybutton==0.5.0
    pydata_sphinx_theme==0.8.1


[options.packages.find]
where = .
